(Fixes #34) Zipcode modal is a Higher Order Component. Offers props to wrap two components. One to be shown when zipcode is required and another to be shown when zipcode is not required. Zipcode is saved in localStorage, but when Signin funtionality is done it should also be hydrated from user object in db.  Modal also exposes some functions to wrapped component to allow it to updateZipCode() or setShowModal(). Unfortunately this diff may be a little complex.

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -160,7 +160,7 @@ body {
   padding-bottom: 1rem;
   padding: 0.3rem 1rem;
 }
-.cta-ionput {
+.cta-input {
   border-width: 2px;
   border-style: solid;
   border-color: #fff;
@@ -205,7 +205,7 @@ body {
   background-color: #f7c59f;
 }
 .section-header {
-  font-size: 32px;
+  font-size: 2rem;
   font-family: Bebas Neue, sans-serif;
 }
 .feature-container {
